--- a/apps/templates/paiements/factures.html
+++ b/apps/templates/paiements/factures.html
@@ -69,6 +69,9 @@
               <div class="card-header border-0">
                 <h3 class="mb-0"><em>Liste des factures</em>
                   <!-- <a href="{% url 'paiement:add_facture' %}" class="btn btn-sm btn-neutral float-right">+ Ajouter</a> -->
+                  <!-- {% if 'a-factures-consulter' in user.permissions.codes or user.is_staff %} -->
+                    <a href="{% url 'paiement:print_bills' %}" target="_blank" class="btn btn-sm btn-danger mr-2 float-right" role="button" data-id="a-paiements-exportpdf">PDF</a>
+                  <!-- {% endif %} -->
                 </h3>
               </div>
               <!-- Light table -->
