--- a/apps/templates/paiements/declarations.html
+++ b/apps/templates/paiements/declarations.html
@@ -71,6 +71,9 @@
                   {% if 'a-declarations-ajouter' in user.permissions.codes or user.is_staff %}
                     <a href="#" class="btn btn-sm btn-neutral float-right" role="button" data-id="a-declarations-ajouter" data-toggle="modal" data-target="#modal-declaration-add">+Ajouter</a>
                   {% endif %}
+                  {% if 'a-declarations-ajouter' in user.permissions.codes or user.is_staff %}
+                    <a href="{% url 'paiement:print_declarations' %}" target="_blank" class="btn btn-sm btn-danger mr-2 float-right" role="button" data-id="a-declarations-exportpdf">PDF</a>
+                  {% endif %}
                   </h3>
                   
                 <div class="modal fade" id="modal-declaration-add" tabindex="-1" role="dialog" aria-labelledby="modal-declaration-add" aria-hidden="true">
