--- a/apps/templates/paiements/declarations.html
+++ b/apps/templates/paiements/declarations.html
@@ -126,11 +126,12 @@
                 </div>
               </div>
               <!-- Light table -->
-              <div class="table-responsive py-4" data-toggle="list" data-list-values='["n°", "client", "title",  "total_employee", "status", "date", "actions"]'>
+              <div class="table-responsive py-4" data-toggle="list" data-list-values='["n°", "ref", "client", "title",  "total_employee", "status", "date", "actions"]'>
                 <table class="table align-items-center table-flush" id="datatable-basic"> <!--  id="datatable-basic" -->
                   <thead class="thead-light">
                     <tr>
                       <th scope="col" class="sort" data-sort="n°">N°</th>
+                      <th scope="col" class="sort" data-sort="ref">Référence</th>
                       <th scope="col" class="sort" data-sort="client">Entreprise</th>
                       <th scope="col" class="sort" data-sort="title">Titre</th>
                       <th scope="col" class="sort" data-sort="total_employee">Total Employées</th>
@@ -144,6 +145,9 @@
                       <tr>
                         <td class="n°">
                           {{forloop.counter}}
+                        </td>
+                        <td class="n°">
+                          {{declaration|get_reference}}
                         </td>
                         <td scope="client" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width: 100px;">
                           {{declaration.created_by.profile.name}}
