--- a/apps/templates/accounts/agencies.html
+++ b/apps/templates/accounts/agencies.html
@@ -66,11 +66,15 @@
               <div class="card-header border-0">
                 <h3 class="mb-0"><em>Liste des agences du système</em>
                   {% if 'a-agences-ajouter' in user.permissions.codes or user.is_staff %}
-                    <a href="{% url 'authentication:add_agency' %}" data-id="a-agences-ajouter" class="btn btn-sm btn-neutral float-right">+ Ajouter</a>
+                    <a href="{% url 'paiement:print_agencies' %}" target="_blank" data-id="a-agences-exportpdf" class="btn btn-sm btn-danger float-right">PDF</a>
                   {% endif %}
                   {% if 'a-agences-ajouter' in user.permissions.codes or user.is_staff %}
-                    <a href="{% url 'paiement:print_agencies' %}" target="_blank" data-id="a-agences-exportpdf" class="btn btn-sm btn-danger mr-2 float-right">PDF</a>
+                    <a href="{% url 'paiement:export_agencies' %}" target="_blank" data-id="a-agences-exportxlsx" class="btn btn-sm btn-success ml-2 float-right">XLSX</a>
                   {% endif %}
+                  {% if 'a-agences-ajouter' in user.permissions.codes or user.is_staff %}
+                    <a href="{% url 'authentication:add_agency' %}" data-id="a-agences-ajouter" class="btn btn-sm btn-neutral float-right">+ Ajouter</a>
+                  {% endif %}
+                  
                 </h3>
               </div>
               <!-- Light table -->
