--- a/apps/templates/accounts/permissions.html
+++ b/apps/templates/accounts/permissions.html
@@ -64,10 +64,13 @@
               <div class="card-header border-0">
                 <h3 class="mb-0"><em>Liste des permissions</em>
                   {% if 'a-permissions-ajouter' in user.permissions.codes or user.is_staff %}
-                    <a href="{% url 'authentication:add_permissions' %}" data-id="a-permissions-ajouter" class="btn btn-sm btn-neutral float-right">+ Ajouter</a>
+                  <a href="{% url 'paiement:print_permissions' %}" target="_blank" data-id="a-permissions-exportpdf" class="btn btn-sm btn-danger float-right">PDF</a>
                   {% endif %}
                   {% if 'a-permissions-ajouter' in user.permissions.codes or user.is_staff %}
-                  <a href="{% url 'paiement:print_permissions' %}" target="_blank" data-id="a-permissions-exportpdf" class="btn btn-sm btn-danger mr-2 float-right">PDF</a>
+                  <a href="{% url 'paiement:export_permissions' %}" target="_blank" data-id="a-permissions-exportxlsx" class="btn btn-sm btn-success ml-2 float-right">XLSX</a>
+                  {% endif %}
+                  {% if 'a-permissions-ajouter' in user.permissions.codes or user.is_staff %}
+                    <a href="{% url 'authentication:add_permissions' %}" data-id="a-permissions-ajouter" class="btn btn-sm btn-neutral float-right">+ Ajouter</a>
                   {% endif %}
                 </h3>
               </div>
