--- a/apps/templates/accounts/profiles.html
+++ b/apps/templates/accounts/profiles.html
@@ -109,10 +109,13 @@
               <div class="card-header border-0">
                 <h3 class="mb-0"><em>Liste des profils du système</em>
                   {% if 'a-profiles-ajouter' in user.permissions.codes or user.is_staff %}
-                    <a href="{% url 'authentication:add_profile' %}" data-id="a-profiles-ajouter" class="btn btn-sm btn-neutral float-right">+ Ajouter</a>
+                  <a href="{% url 'paiement:print_profiles' %}" target="_blank" data-id="a-profiles-exportpdf" class="btn btn-sm btn-danger float-right">PDF</a>
                   {% endif %}
                   {% if 'a-profiles-ajouter' in user.permissions.codes or user.is_staff %}
-                  <a href="{% url 'paiement:print_profiles' %}" target="_blank" data-id="a-profiles-exportpdf" class="btn btn-sm btn-danger mr-2 float-right">PDF</a>
+                  <a href="{% url 'paiement:export_profiles' %}" target="_blank" data-id="a-profiles-exportxlsx" class="btn btn-sm btn-success ml-2 float-right">XLSX</a>
+                  {% endif %}
+                  {% if 'a-profiles-ajouter' in user.permissions.codes or user.is_staff %}
+                    <a href="{% url 'authentication:add_profile' %}" data-id="a-profiles-ajouter" class="btn btn-sm btn-neutral float-right">+ Ajouter</a>
                   {% endif %}
                 </h3>
               </div>
