--- a/apps/templates/paiements/declarations.html
+++ b/apps/templates/paiements/declarations.html
@@ -69,10 +69,13 @@
               <div class="card-header border-0">
                 <h3 class="mb-0"><em>Liste des déclarations</em>
                   {% if 'a-declarations-ajouter' in user.permissions.codes or user.is_staff %}
-                    <a href="#" class="btn btn-sm btn-neutral float-right" role="button" data-id="a-declarations-ajouter" data-toggle="modal" data-target="#modal-declaration-add">+Ajouter</a>
+                    <a href="{% url 'paiement:print_declarations' %}" target="_blank" class="btn btn-sm btn-danger float-right" role="button" data-id="a-declarations-exportpdf">PDF</a>
                   {% endif %}
                   {% if 'a-declarations-ajouter' in user.permissions.codes or user.is_staff %}
-                    <a href="{% url 'paiement:print_declarations' %}" target="_blank" class="btn btn-sm btn-danger mr-2 float-right" role="button" data-id="a-declarations-exportpdf">PDF</a>
+                    <a href="{% url 'paiement:export_declarations' %}" target="_blank" class="btn btn-sm btn-success ml-2 float-right" role="button" data-id="a-declarations-exportxlsx">XLSX</a>
+                  {% endif %}
+                  {% if 'a-declarations-ajouter' in user.permissions.codes or user.is_staff %}
+                    <a href="#" class="btn btn-sm btn-neutral float-right" role="button" data-id="a-declarations-ajouter" data-toggle="modal" data-target="#modal-declaration-add">+Ajouter</a>
                   {% endif %}
                   </h3>
                   
