--- a/apps/templates/paiements/factures.html
+++ b/apps/templates/paiements/factures.html
@@ -70,7 +70,10 @@
                 <h3 class="mb-0"><em>Liste des factures</em>
                   <!-- <a href="{% url 'paiement:add_facture' %}" class="btn btn-sm btn-neutral float-right">+ Ajouter</a> -->
                   <!-- {% if 'a-factures-consulter' in user.permissions.codes or user.is_staff %} -->
-                    <a href="{% url 'paiement:print_bills' %}" target="_blank" class="btn btn-sm btn-danger mr-2 float-right" role="button" data-id="a-paiements-exportpdf">PDF</a>
+                  <a href="{% url 'paiement:print_bills' %}" target="_blank" class="btn btn-sm btn-danger float-right" role="button" data-id="a-paiements-exportpdf">PDF</a>
+                  <!-- {% endif %} -->
+                  <!-- {% if 'a-factures-consulter' in user.permissions.codes or user.is_staff %} -->
+                    <a href="{% url 'paiement:export_bills' %}" target="_blank" class="btn btn-sm btn-success mr-2 float-right" role="button" data-id="a-paiements-exportxlsx">XLSX</a>
                   <!-- {% endif %} -->
                 </h3>
               </div>
