--- a/apps/templates/paiements/payments.html
+++ b/apps/templates/paiements/payments.html
@@ -70,10 +70,13 @@
                 <h3 class="mb-0"><em>Liste des paiements</em>
                   <!-- <a href="{% url 'paiement:add_payment' %}" class="btn btn-sm btn-neutral float-right">+ Ajouter</a> -->
                   {% if 'a-paiements-generer' in user.permissions.codes or user.is_staff %}
-                    <button class="btn btn-sm btn-neutral float-right" data-id="a-paiements-generer" role="button" data-toggle="modal" data-target="#modal-payment-generate">Generate</button>
+                    <a href="{% url 'paiement:print_paiements' %}" target="_blank" class="btn btn-sm btn-danger float-right" role="button" data-id="a-paiements-exportpdf">PDF</a>
                   {% endif %}
                   {% if 'a-paiements-generer' in user.permissions.codes or user.is_staff %}
-                    <a href="{% url 'paiement:print_paiements' %}" target="_blank" class="btn btn-sm btn-danger mr-2 float-right" role="button" data-id="a-paiements-exportpdf">PDF</a>
+                    <a href="{% url 'paiement:export_paiements' %}" target="_blank" class="btn btn-sm btn-success ml-2 float-right" role="button" data-id="a-paiements-exportxlsx">XLSX</a>
+                  {% endif %}
+                  {% if 'a-paiements-generer' in user.permissions.codes or user.is_staff %}
+                    <button class="btn btn-sm btn-neutral float-right" data-id="a-paiements-generer" role="button" data-toggle="modal" data-target="#modal-payment-generate">Generate</button>
                   {% endif %}
                 </h3>
               </div>
