--- a/apps/templates/accounts/agencies.html
+++ b/apps/templates/accounts/agencies.html
@@ -65,10 +65,10 @@
               <!-- Card header -->
               <div class="card-header border-0">
                 <h3 class="mb-0"><em>Liste des agences du système</em>
-                  {% if 'a-agences-ajouter' in user.permissions.codes or user.is_staff %}
+                  {% if 'a-agences-exportpdf' in user.permissions.codes or user.is_staff %}
                     <a href="{% url 'paiement:print_agencies' %}" target="_blank" data-id="a-agences-exportpdf" class="btn btn-sm btn-danger float-right">PDF</a>
                   {% endif %}
-                  {% if 'a-agences-ajouter' in user.permissions.codes or user.is_staff %}
+                  {% if 'a-agences-exportxlsx' in user.permissions.codes or user.is_staff %}
                     <a href="{% url 'paiement:export_agencies' %}" target="_blank" data-id="a-agences-exportxlsx" class="btn btn-sm btn-success ml-2 float-right">XLSX</a>
                   {% endif %}
                   {% if 'a-agences-ajouter' in user.permissions.codes or user.is_staff %}
