--- a/apps/templates/accounts/permissions.html
+++ b/apps/templates/accounts/permissions.html
@@ -63,10 +63,10 @@
               <!-- Card header -->
               <div class="card-header border-0">
                 <h3 class="mb-0"><em>Liste des permissions</em>
-                  {% if 'a-permissions-ajouter' in user.permissions.codes or user.is_staff %}
+                  {% if 'a-permissions-exportpdf' in user.permissions.codes or user.is_staff %}
                   <a href="{% url 'paiement:print_permissions' %}" target="_blank" data-id="a-permissions-exportpdf" class="btn btn-sm btn-danger float-right">PDF</a>
                   {% endif %}
-                  {% if 'a-permissions-ajouter' in user.permissions.codes or user.is_staff %}
+                  {% if 'a-permissions-exportxlsx' in user.permissions.codes or user.is_staff %}
                   <a href="{% url 'paiement:export_permissions' %}" target="_blank" data-id="a-permissions-exportxlsx" class="btn btn-sm btn-success ml-2 float-right">XLSX</a>
                   {% endif %}
                   {% if 'a-permissions-ajouter' in user.permissions.codes or user.is_staff %}
