ajout de la commande pour migrer les donnees de declaration dans la table intermediaire entre declaration et employee

--- a/apps/templates/paiements/declarations.html
+++ b/apps/templates/paiements/declarations.html
@@ -168,7 +168,7 @@
                       {{declaration.title}}
                     </th>
                     <td class="total_employe text-center">
-                      {{declaration.employee_declarations.count}}
+                      {{declaration.nb_employees }}
                     </td>
                     <td class="status">
                       {{declaration.get_status_display}}
