--- a/apps/templates/paiements/declarations.html
+++ b/apps/templates/paiements/declarations.html
@@ -41,25 +41,7 @@
   <div class="row">
     <div class="col-xl-12">
 
-      {% if messages %}
-      <!-- Alerts -->
-      {% for message in messages %}
-      <div
-        class="alert alert-{% if message.tags == 'success' %}success{% else %}danger{% endif %} alert-dismissible fade show"
-        role="alert">
-        <span class="alert-icon">
-          {% if message.tags == 'success' %}<i class="ni ni-like-2"></i>{% else %}<i class="fas fa-thumbs-down"></i>{% endif %}
-        </span>
-        <span class="alert-text">
-          <strong>{% if message.tags == 'success' %}Succès !{% else %}Erreur !{% endif %}</strong>
-          {{ message | safe }} <br>
-        </span>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      {% endfor %}
-      {% endif %}
+     {% include "paiements/includes/message.html" %}
 
 
 
@@ -216,7 +198,7 @@
                                     <div class="col">
                                       <i class="ni education_hat mr-2"></i><span class="text-muted">Total
                                         Employées:</span>
-                                      <span class="heading"><strong>{{declaration.employee_declarations.count}}
+                                      <span class="heading"><strong>{{declaration.employees.count}}
                                         </strong></span>
                                     </div>
                                   </div>
@@ -241,7 +223,7 @@
                                       <div>
                                         <i class="ni ni-education_hat mr-2"></i><span class="text-muted">Cadres:</span>
                                         <span class="heading">
-                                          <h3>{{declaration.employee_declarations | count_employee_jobcategory:1}}</h3>
+                                          <h3>{{declaration.employees | count_employee_jobcategory:1}}</h3>
                                         </span>
                                       </div>
                                     </div>
@@ -249,7 +231,7 @@
                                       <div>
                                         <i class="ni ni-education_hat mr-2"></i><span class="text-muted">Agents:</span>
                                         <span class="heading">
-                                          <h3>{{declaration.employee_declarations | count_employee_jobcategory:2}}</h3>
+                                          <h3>{{declaration.employees | count_employee_jobcategory:2}}</h3>
                                         </span>
                                       </div>
                                     </div>
@@ -258,7 +240,7 @@
                                         <i class="ni ni-education_hat mr-2"></i><span
                                           class="text-muted">Ouvriers:</span>
                                         <span class="heading">
-                                          <h3>{{declaration.employee_declarations | count_employee_jobcategory:3}}</h3>
+                                          <h3>{{declaration.employees | count_employee_jobcategory:3}}</h3>
                                         </span>
                                       </div>
                                     </div>
@@ -279,7 +261,7 @@
                                         </tr>
                                       </thead>
                                       <tbody class="list">
-                                        {% for employee in declaration.employee_declarations.all %}
+                                        {% for employee in declaration.employees.all %}
                                         <tr>
                                           <td class="text-center">
                                             <span class="name">{{forloop.counter}}</span>
@@ -429,7 +411,7 @@
                       {% endif %}
 
                       {% if 'a-declarations-soumettre' in user.permissions.codes or user.is_staff %}
-                      {% if declaration.status == 'unsubmitted' and declaration.employee_declarations.count > 0 or declaration.status == 'rejected' and declaration.employee_declarations.count > 0 %}
+                      {% if declaration.status == 'unsubmitted' and declaration.employees.count > 0 or declaration.status == 'rejected' and declaration.employees.count > 0 %}
                       <span>
                         <button class="btn btn-sm btn-icon-only" role="button" data-id="a-declarations-soumettre"
                           data-toggle="modal" data-target="#modal-declaration-submit-{{declaration.id}}">Sbt</button>
