--- a/apps/templates/paiements/edit-declaration.html
+++ b/apps/templates/paiements/edit-declaration.html
@@ -38,23 +38,7 @@
     
     <div class="row">
       <div class="col-xl-12">
-        {% if messages %}
-          <!-- Alerts -->
-          {% for message in messages %}
-            <div class="alert {{ message.tags }} alert-dismissible fade show" role="alert">
-              <span class="alert-icon"><i class="ni ni-like-2"></i></span>
-              <span class="alert-text">
-                {% comment %}  {% endcomment %}
-                {% for message in messages %}
-                  {{ message | safe }}
-                {% endfor %}
-              </span>
-              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-          {% endfor %}
-        {% endif %}
+        {% include "paiements/includes/message.html" %}
 
         <div class="row">
             <div class="col-lg-12">
