--- a/apps/templates/paiements/payments.html
+++ b/apps/templates/paiements/payments.html
@@ -44,12 +44,12 @@
         {% if messages %}
           <!-- Alerts -->
           {% for message in messages %}
-            <div class="alert alert-{% if message.tags == 'success' %}success{% else %}danger{% endif %} alert-dismissible fade show" role="alert">
+            <div class="alert alert-{% if message.tags == 'alert-success' %}success{% else %}danger{% endif %} alert-dismissible fade show" role="alert">
               <span class="alert-icon">
-                {% if message.tags == 'success' %}<i class="ni ni-like-2"></i>{% else %}<i class="fas fa-thumbs-down"></i>{% endif %}
+                {% if message.tags == 'alert-success' %}<i class="ni ni-like-2"></i>{% else %}<i class="fas fa-thumbs-down"></i>{% endif %}
               </span>
               <span class="alert-text">
-                <strong>{% if message.tags == 'success' %}Succès !{% else %}Erreur !{% endif %}</strong>
+                <strong>{% if message.tags == 'alert-success' %}Succès !{% else %}Erreur !{% endif %}</strong>
                 {{ message | safe }} <br>
               </span>
               <button type="button" class="close" data-dismiss="alert" aria-label="Close">
