--- a/apps/templates/paiements/edit-declaration.html
+++ b/apps/templates/paiements/edit-declaration.html
@@ -164,111 +164,17 @@
                                   <button class="btn btn-sm btn-icon-only" role="button" data-toggle="modal" data-target="#modal-employee-{{employee.id}}">View</button>
                                 </span>
                                   
-                                <div class="modal fade" id="modal-employee-{{employee.id}}" tabindex="-1" role="dialog" aria-labelledby="modal-employee-{{employee.id}}" aria-hidden="true">
-                                  <div class="modal-dialog modal-dialog-centered" role="dialog">
-                                    <div class="modal-content">
-                                      <div class="modal-header justify-content-center">
-                                        <h2>Informations de l'employé </h2>
-                                      </div>
-                                      <div class="modal-body">
+                                
 
-                                        <div class="card card-agency mt--4 mb--4">
-                                          <div class="card-header text-center">
-                                            <div class="row text-center">
-                                              <div class="col">
-                                                <i class="ni education_hat mr-2"></i><strong>Fonction:</strong> {{employee.job}} ({{employee.job_category}})
-                                              </div>
-                                            </div>
-                                              
-                                          </div>
-                                          <div class="card-body">
-                                            <div class="row">
-                                              <div class="col">
-                                                <i class="ni education_hat mr-2"></i><span class="text-muted">N° de passeport:</span> 
-                                                <strong>{{employee.passport_number}}</strong>
-                                              </div>
-                                            </div>
-                                            <div class="row">
-                                              <div class="col">
-                                                <i class="ni education_hat mr-2"></i><span class="text-muted">Prénoms & Nom:</span> 
-                                                <strong>{{employee.first}} {{employee.last}}</strong>
-                                              </div>
-                                            </div>
-                                            <div class="row">
-                                              <div class="col">
-                                                <i class="ni education_hat mr-2"></i><span class="text-muted">Téléphone:</span>
-                                                <strong>{{employee.phone}} </strong>
-                                              </div>
-                                            </div>
-                                            <div class="row">
-                                              <div class="col">
-                                                <i class="ni education_hat mr-2"></i><span class="text-muted">Email:</span>
-                                                <strong>{{employee.email}}</strong>
-                                              </div>
-                                            </div>
-                                          
-                                            <div class="row">
-                                              <div class="col">
-                                                <i class="ni education_hat mr-2"></i><span class="text-muted">Autres:</span><br> 
-                                                <strong>Texte</strong>
-                                              </div>
-                                              
-                                            </div>
-                                          </div>
-                                        </div>
-
-                                      </div>
-                                      <div class="modal-footer justify-content-center">
-                                        <button type="button" class="btn btn-primary" data-dismiss="modal">Fermer</button>
-                                      </div>
-                                    </div>
-                                  </div>
-                                </div>
-
-                                <!-- <span>
-                                  <button data-href="{% url 'paiement:edit_declaration' employee.id %}" class="edit-link btn btn-sm btn-icon-only" role="button">Del</button>
-                                </span> -->
+                                 <span>
+                                  <button class="btn btn-sm btn-icon-only" role="button" data-toggle="modal" data-target="#modal-employee-edit-{{ employee.id }}">Edit</button>
+                                </span>
 
                                 <span>
                                   <button class="btn btn-sm btn-icon-only" role="button" data-toggle="modal" data-target="#modal-delete-confirmation-{{employee.id}}">Del</button>
                                 </span>
                                   
-                                <div class="modal fade" id="modal-delete-confirmation-{{employee.id}}" tabindex="-1" role="dialog" aria-labelledby="modal-delete-confirmation-{{employee.id}}" aria-hidden="true">
-                                  <div class="modal-dialog modal-dialog-centered" role="dialog">
-                                    <div class="modal-content">
-                                      <div class="modal-header justify-content-center">
-                                        <h2>Confirmation </h2>
-                                      </div>
-                                      
-                                      <form id="delete-employee-{{employee.id}}-form" role="form" action="{% url 'paiement:edit_declaration' declaration_id %}" method="post">
-                                        {% csrf_token %}
-                                        <div class="modal-body">
-          
-                                          <div class="card card-agency mt--4 mb--4">
-                                            
-                                            <div class="card-body">
-                                              <div class="row">
-                                                <div class="col">
-                                                  <i class="ni education_hat mr-2"></i><span class="text-muted"></span> 
-                                                  <strong>Êtes-vous sûr de vouloir supprimer cet employé ?</strong>
-                                                </div>
-                                              </div>
-                                              <input type="hidden" name="employee-id" value="0">
-                                            </div>
-                                          </div>
-          
-                                        </div>
-                                        <div class="modal-footer justify-content-center">
-                                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Non</button>
-                                          <input type="hidden" name="delete-employee-form-submit" value="">
-                                          <input type="submit" id="delete-employee-{{employee.id}}" data-employee="{{employee.id}}" class="btn btn-danger submit-btn" value="Oui">
-                                          
-                                        </div>
-                                        
-                                      </form>
-                                    </div>
-                                  </div>
-                                </div>
+                                
                                 
                               </td>
                             </tr>
@@ -319,6 +225,13 @@
     {% include 'includes/footer.html' %}
 
   </div>
+
+  {% for em, ef in employees_edit_forms %}
+
+  {% include "paiements/includes/edit-employee.html" with employee=em employeeform=ef  %}
+  {% include "paiements/includes/info-employee.html" with employee=em employeeform=ef  %}
+  {% include "paiements/includes/delete-employee.html" with employee=em employeeform=ef  %}
+  {% endfor %}
 
 {% endblock content %}
 
