--- a/apps/templates/paiements/includes/edit-employee.html
+++ b/apps/templates/paiements/includes/edit-employee.html
@@ -1,15 +1,15 @@
-<div class="modal fade" id="modal-employee-add" tabindex="-1" role="dialog" aria-labelledby="modal-employee-add" aria-hidden="true">
+<div class="modal fade" id="modal-employee-edit-{{ employee.id }}" tabindex="-1" role="dialog" aria-labelledby="modal-employee-add" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered " role="dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="modal-employee-add">Ajout d'employé</h4>
+                <h4 class="modal-title" id="modal-employee-add">Modification d'employé</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
             </div>
             <hr>
             <div class="modal-body mt--6">
-                <form id="employee-form" action="{% url 'paiement:edit_declaration' declaration_id %}" method="post">
+                <form id="employee-form" action="{% url 'paiement:employee_edit' declaration_id employee.id %}" method="POST">
                     {% csrf_token %}
                     {% include "paiements/includes/form-employee.html" %}
                 </form>
