--- a/apps/templates/paiements/includes/delete-employee.html
+++ b/apps/templates/paiements/includes/delete-employee.html
@@ -5,7 +5,7 @@
           <h2>Confirmation </h2>
         </div>
         
-        <form id="delete-employee-{{employee.id}}-form" role="form" action="{% url 'paiement:edit_declaration' declaration_id %}" method="post">
+        <form id="delete-employee-{{employee.id}}-form" role="form" action="{% url 'paiement:employee_delete' declaration_id employee.id %}" method="post">
           {% csrf_token %}
           <div class="modal-body">
 
@@ -18,7 +18,7 @@
                     <strong>Êtes-vous sûr de vouloir supprimer cet employé ?</strong>
                   </div>
                 </div>
-                <input type="hidden" name="employee-id" value="0">
+                <input type="hidden" name="employee-id" value="1">
               </div>
             </div>
 
