--- a/apps/templates/paiements/payments.html
+++ b/apps/templates/paiements/payments.html
@@ -41,24 +41,7 @@
     <div class="row">
       <div class="col-xl-12">
 
-        {% if messages %}
-          <!-- Alerts -->
-          {% for message in messages %}
-            <div class="alert alert-{% if message.tags == 'alert-success' %}success{% else %}danger{% endif %} alert-dismissible fade show" role="alert">
-              <span class="alert-icon">
-                {% if message.tags == 'alert-success' %}<i class="ni ni-like-2"></i>{% else %}<i class="fas fa-thumbs-down"></i>{% endif %}
-              </span>
-              <span class="alert-text">
-                <strong>{% if message.tags == 'alert-success' %}Succès !{% else %}Erreur !{% endif %}</strong>
-                {{ message | safe }} <br>
-              </span>
-              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-          {% endfor %}
-        {% endif %}
-
+        {% include "paiements/includes/message.html" %}
       
 
         <!-- Table -->
