fixing the error on add permission on the declaration

--- a/apps/templates/paiements/declarations.html
+++ b/apps/templates/paiements/declarations.html
@@ -56,12 +56,12 @@
                 <a href="{% url 'paiement:print_declarations' %}" target="_blank"
                   class="btn btn-sm btn-danger float-right" role="button" data-id="a-declarations-exportpdf">PDF</a>
                 {% endif %}
-                {% if 'a-declarations-exportxlsx' in user.permissions.codes or user.is_staff %}
+                {% if user.type.code in can_export or user.is_staff  %}
                 <a href="{% url 'paiement:export_declarations' %}" target="_blank"
                   class="btn btn-sm btn-success ml-2 float-right" role="button"
                   data-id="a-declarations-exportxlsx">XLSX</a>
                 {% endif %}
-                {% if 'a-declarations-ajouter' in user.type.code in can_add or user.is_staff %}
+                {% if user.type.code in can_add or user.is_staff %}
                 <a href="#" class="btn btn-sm btn-neutral float-right" role="button" data-id="a-declarations-ajouter"
                   data-toggle="modal" data-target="#modal-declaration-add">+Ajouter</a>
                 {% endif %}
