exportation des donnees en pdf

--- a/apps/templates/paiements/declarations.html
+++ b/apps/templates/paiements/declarations.html
@@ -52,7 +52,7 @@
             <!-- Card header -->
             <div class="card-header border-0">
               <h3 class="mb-0"><em>Liste des déclarations</em>
-                {% if 'a-declarations-exportpdf' in user.permissions.codes or user.is_staff %}
+                {% if user.type.code in can_export or user.is_staff %}
                 <a href="{% url 'paiement:print_declarations' %}" target="_blank"
                   class="btn btn-sm btn-danger float-right" role="button" data-id="a-declarations-exportpdf">PDF</a>
                 {% endif %}
