ajout de la reference de la declaration sur les export pdf et excel de la facture

--- a/apps/templates/paiements/factures.html
+++ b/apps/templates/paiements/factures.html
@@ -106,7 +106,7 @@
                           {{facture.declaration_ref.title}}
                         </td>
                         <th scope="ref">
-                          {{ facture.declaration_ref.reference }}
+                          {{facture.declaration_ref|get_reference}}
                         </th>
                         <th scope="ref">
                           {{facture.client.name}}
