corriger l'errreur sur le chargement des fichiers statics

--- a/apps/templates/includes/sidebar-inner.html
+++ b/apps/templates/includes/sidebar-inner.html
@@ -1,10 +1,9 @@
-
-    <!-- The Inner links -->
+{% load static %}
     <div class="scrollbar-inner">
         <!-- Brand -->
         <div class="sidenav-header d-flex align-items-center">
             <a class="navbar-brand mt-4" href="/">
-                <img src="/static/assets/img/brand/logo.jpg" style="max-height: 100%;" class="navbar-brand-img" alt="Logo">
+                <img src="{% static "assets/img/brand/logo.jpg" %}" style="max-height: 100%;" class="navbar-brand-img" alt="Logo">
             </a>
             <div class=" ml-auto ">
                 <!-- Sidenav toggler -->
