--- a/apps/templates/accounts/profiles.html
+++ b/apps/templates/accounts/profiles.html
@@ -1,5 +1,5 @@
 {% extends "layouts/base.html" %}
-
+{% load static %}
 {% block title %} Profils {% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
@@ -185,7 +185,7 @@
                                     {% if profile.picture %}
                                       <img src="{{profile.picture.url}}"  alt="Picture" class="card-img-top" style="max-height: 226px;">
                                     {% else %}
-                                      <img src="/static/assets/img/theme/img-1-1000x600.jpg" alt="Image placeholder" class="card-img-top">
+                                      <img src="{% static "assets/img/theme/img-1-1000x600.jpg" %}" alt="Image placeholder" class="card-img-top">
                                     {% endif %}
                                     
                                     <div class="card-header text-center border-0 pt-8 pt-md-4 pb-0 pb-md-4">
