--- a/apps/templates/includes/navigation-fullscreen.html
+++ b/apps/templates/includes/navigation-fullscreen.html
@@ -1,9 +1,9 @@
-
+{% load static %}
   <!-- Navbar -->
   <nav id="navbar-main" class="navbar navbar-horizontal navbar-transparent navbar-main navbar-expand-lg navbar-light">
     <div class="container">
       <a class="navbar-brand" href="/">
-        <img src="/static/assets/img/brand/logo.jpg">
+        <img src="{% static "assets/img/brand/logo.jpg" %}">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -13,7 +13,7 @@
           <div class="row">
             <div class="col-6 collapse-brand">
               <a href="/">
-                <img src="/static/assets/img/brand/logo.jpg">
+                <img src="{% static "assets/img/brand/logo.jpg" %}">
               </a>
             </div>
             <div class="col-6 collapse-close">
