--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -1,13 +1,4 @@
-<!--
-=========================================================
-* Argon Dashboard PRO - v1.2.0
-=========================================================
-* Product Page: https://www.creative-tim.com/product/argon-dashboard-pro
-* Copyright  Creative Tim (http://www.creative-tim.com)
-* Coded by www.creative-tim.com
-=========================================================
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
--->
+{% load static %}
 <!DOCTYPE html>
 <html>
 
@@ -22,24 +13,24 @@
   </title>
 
   <!-- Favicon -->
-  <link rel="icon" href="/static/assets/img/brand/logo.jpg" type="image/jpg">
+  <link rel="icon" href="{% static "assets/img/brand/logo.jpg" %}" type="image/jpg">
   <!-- Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
   <!-- Icons -->
-  <link rel="stylesheet" href="/static/assets/vendor/nucleo/css/nucleo.css" type="text/css">
-  <link rel="stylesheet" href="/static/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" type="text/css">
+  <link rel="stylesheet" href="{% static "assets/vendor/nucleo/css/nucleo.css" %}" type="text/css">
+  <link rel="stylesheet" href="{% static "assets/vendor/@fortawesome/fontawesome-free/css/all.min.css" %}" type="text/css">
 
   <!-- Specific Page CSS goes HERE  -->  
   {% block stylesheets %}{% endblock stylesheets %}
 
   <!-- DataTables CSS -->
-  <link rel="stylesheet" href="/static/assets/vendor/datatables.net-bs4/css/dataTables.bootstrap4.min.css">
-  <link rel="stylesheet" href="/static/assets/vendor/datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css">
-  <!-- <link rel="stylesheet" href="/static/assets/vendor/datatables.net-select-bs4/css/select.bootstrap4.min.css"> -->
-  <link rel="stylesheet" href="/static/assets/vendor/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css">
+  <link rel="stylesheet" href="{% static "assets/vendor/datatables.net-bs4/css/dataTables.bootstrap4.min.css" %}">
+  <link rel="stylesheet" href="{% static "assets/vendor/datatables.net-buttons-bs4/css/buttons.bootstrap4.min.css" %}">
+  <!-- <link rel="stylesheet" href="/assets/vendor/datatables.net-select-bs4/css/select.bootstrap4.min.css"> -->
+  <link rel="stylesheet" href="{% static "assets/vendor/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css" %}">
 
   <!-- Argon CSS -->
-  <link rel="stylesheet" href="/static/assets/css/argon.css?v=1.2.0" type="text/css">
+  <link rel="stylesheet" href="{% static "assets/css/argon.css" %}" type="text/css">
 
 </head>
 <body class="">
@@ -58,29 +49,29 @@
   
   <!-- Argon Scripts -->
   <!-- Core -->
-  <script src="/static/assets/vendor/jquery/dist/jquery.min.js"></script>
-  <script src="/static/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="/static/assets/vendor/js-cookie/js.cookie.js"></script>
-  <script src="/static/assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js"></script>
-  <script src="/static/assets/vendor/jquery-scroll-lock/dist/jquery-scrollLock.min.js"></script>
+  <script src="{% static "assets/vendor/jquery/dist/jquery.min.js" %}"></script>
+  <script src="{% static "assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js" %}"></script>
+  <script src="{% static "assets/vendor/js-cookie/js.cookie.js" %}"></script>
+  <script src="{% static "assets/vendor/jquery.scrollbar/jquery.scrollbar.min.js" %}"></script>
+  <script src="{% static "assets/vendor/jquery-scroll-lock/dist/jquery-scrollLock.min.js" %}"></script>
 
    <!-- Specific Page JS goes HERE  -->
    {% block javascripts %}{% endblock javascripts %}
 
    <!-- For tables purpose -->
-   <script src="/static/assets/vendor/datatables.net/js/jquery.dataTables.min.js"></script>
-   <script src="/static/assets/vendor/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
-   <script src="/static/assets/vendor/datatables.net-buttons/js/dataTables.buttons.min.js"></script>
-   <script src="/static/assets/vendor/datatables.net-buttons-bs4/js/buttons.bootstrap4.min.js"></script>
-   <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.html5.min.js"></script>
-   <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.flash.min.js"></script>
-   <script src="/static/assets/vendor/datatables.net-buttons/js/buttons.print.min.js"></script>
-   <script src="/static/assets/vendor/datatables.net-select/js/dataTables.select.min.js"></script>
+   <script src="{% static "assets/vendor/datatables.net/js/jquery.dataTables.min.js" %}"></script>
+   <script src="{% static "assets/vendor/datatables.net-bs4/js/dataTables.bootstrap4.min.js" %}"></script>
+   <script src="{% static "assets/vendor/datatables.net-buttons/js/dataTables.buttons.min.js" %}"></script>
+   <script src="{% static "assets/vendor/datatables.net-buttons-bs4/js/buttons.bootstrap4.min.js" %}"></script>
+   <script src="{% static "assets/vendor/datatables.net-buttons/js/buttons.html5.min.js" %}"></script>
+   <script src="{% static "assets/vendor/datatables.net-buttons/js/buttons.flash.min.js" %}"></script>
+   <script src="{% static "assets/vendor/datatables.net-buttons/js/buttons.print.min.js" %}"></script>
+   <script src="{% static "assets/vendor/datatables.net-select/js/dataTables.select.min.js" %}"></script>
   
   <!-- Argon JS -->
-  <script src="/static/assets/js/argon.js?v=1.2.0"></script>
+  <script src="{% static "assets/js/argon.js" %}"></script>
   <!-- Demo JS - remove this in your project -->
-  <script src="/static/assets/js/demo.min.js"></script>
+  <script src="{% static "assets/js/demo.min.js" %}"></script>
 
 </body>
 </html>
